# myFTApp

./: CMakeLists.txt  Client.c  Client.h  Server.c  Server.h
Common/: SocketFunction.c  SocketFunction.h
CommonFunction/: TransferFunction.c  TransferFunction.h
ServerFunction/: ConcurrenceFunction.c  ConcurrenceFunction.h  StartServer.c  StartServer.h
